--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@whiskeysockets/baileys": "^6.7.9",
     "@hapi/boom": "^9.0.0",
     "child_process": "^1.0.2",
-    "mega": "^1.0.0"
+"megajs": "^1.3.3",
   },
   "engines": {
     "node": "20.x"
