--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^9.23.0",
     "qrcode": "^1.4.4",
     "fs-extra": "^10.1.0",
     "pino": "^8.5.0",
